<resources>
    <string name="app_name">AutoCare</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="sign_up">Sign UP</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="title_activity_navigation_pane">navigationPane</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation">navigation</string>
    <string-array name="vehicle_brands">
        <item>Toyota</item>
        <item>Nissan</item>
        <item>Honda</item>
        <item>Mitsubishi</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_navigation_drawer">navigationDrawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_select_vehicle">select_vehicle</string>
    <string name="openDrawer" />
    <string name="closeDrawer" />
    <string name="title_activity_search_for_places">Map</string>
    <string name="title_activity_maps">Map</string>
</resources>
